# alvearium

./: .gitignore  Cargo.toml
.github/workflows/: cargo.yml  clippy.yml
alvearium/: Cargo.toml
alvearium-js/: Cargo.toml  index.d.ts  index.js  package.json
alvearium-js/.yarn/releases/: yarn-3.2.4.cjs
alvearium-js/__test__/: index.spec.mjs
alvearium-js/npm/android-arm-eabi/: package.json
alvearium-js/npm/android-arm64/: README.md  package.json
alvearium-js/npm/darwin-arm64/: package.json
alvearium-js/npm/darwin-x64/: package.json
alvearium-js/npm/freebsd-x64/: package.json
alvearium-js/npm/linux-arm-gnueabihf/: package.json
alvearium-js/src/: lib.rs
alvearium/examples/: block_api.rs  condenser_api.rs  condenser_api_version.rs  database_api_version.rs
alvearium/src/: enc.rs  lib.rs  ser.rs  types.rs
alvearium/src/block_api/: block.rs  mod.rs  transaction.rs
alvearium/src/condenser_api/: mod.rs  transaction.rs
alvearium/src/crypto/: mod.rs  public_key.rs
alvearium/src/database_api/: mod.rs
alvearium/src/operation/: account_create.rs  account_create_with_delegation.rs  custom.rs  custom_json.rs  mod.rs  vote.rs
alvearium_derive/: Cargo.toml
alvearium_derive/src/: attribute.rs  derive_struct.rs  lib.rs
core/: Cargo.toml
core-derive/: Cargo.toml
core-derive/src/: attribute.rs
core/examples/: block_api.rs  condenser_api.rs  condenser_api_version.rs  database_api_version.rs
core/src/: condenser_api.rs  database_api.rs  de.rs  enc.rs  lib.rs  operation.rs  params.rs  ser.rs  transaction.rs  types.rs
core/src/block_api/: block.rs  (+4 more)
(+19 files in other folders)
