[package]
name = "alvearium"
version = "0.2.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#jsonrpsee = { version = "0.15.1", features = ["full"] }
jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee.git", features = ["full"], rev = "d390823" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.65"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
chrono = { version = "0.4.22" }
secp256k1 = { version = "0.24.0", features = ["std", "recovery"] }
sha2 = "0.10.0"
bs58 = "0.4.0"
ripemd = "0.1.3"
hex = "0.4.3"
hex-literal = "0.3.4"
leb128 = "0.2.5"
alvearium_derive = { path = "../alvearium_derive", version = "1.0.0" }

[dev-dependencies]
rand = "0.8.5"
secp256k1 = { version = "0.24.0", features = ["std", "rand-std"] }
